<resources>
    <string name="app_name">Super Trivia</string>
    <string name="title_home">Game</string>
    <string name="title_settings">Settings</string>
    <string name="title_ranking">Ranking</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirmation">Password Confirmation</string>
    <string name="action_sign_in">Sign</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="invalid_email_or_password">Not a valid email or password</string>
    <string name="start">start</string>
    <string name="game_setup">Game Setup</string>
    <string name="select_difficulty">Select a Difficulty</string>
    <string name="select_category">Select Category</string>
    <string name="save">Save</string>
    <string name="continue_game">Continue Game</string>
    <string name="send_answer">Send Answer</string>
    <string name="finish_game">Finish Game</string>
    <string name="next_problem">Next Problem</string>
    <string name="invalid_selected_answer">Select a valid answer!</string>
    <string name="score">Score</string>
    <string name="asserts">Asserts</string>
    <string name="errors">Errors</string>
    <string name="game">Game</string>
    <string name="logout">Logout</string>
    <string name="name">Name</string>
    <string name="invalid_information">Invalid Information</string>
    <string name="already_have_an_account">already have an account?</string>
    <string name="connection_error">This is an actual network failure</string>
</resources>