<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_game">

    <fragment
        android:id="@+id/navigation_game"
        android:name="ifpr.dispositivosmoveis.supertrivia.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_game_to_navigation_settings"
            app:destination="@id/navigation_settings" />
        <action
            android:id="@+id/action_navigation_game_to_navigation_ranking"
            app:destination="@id/navigation_ranking" />
        <action
            android:id="@+id/action_navigation_game_to_gameFragment"
            app:destination="@id/gameFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="ifpr.dispositivosmoveis.supertrivia.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/navigation_ranking"
        android:name="ifpr.dispositivosmoveis.supertrivia.ui.ranking.RankingFragment"
        android:label="@string/title_ranking"
        tools:layout="@layout/fragment_ranking" />
    <fragment
        android:id="@+id/gameFragment"
        android:name="ifpr.dispositivosmoveis.supertrivia.ui.game.GameFragment"
        android:label="@string/game"
        tools:layout="@layout/fragment_game" >
        <action
            android:id="@+id/action_gameFragment_to_finishGameFragment"
            app:destination="@id/finishGameFragment" />
    </fragment>
    <fragment
        android:id="@+id/finishGameFragment"
        android:name="ifpr.dispositivosmoveis.supertrivia.ui.game.FinishGameFragment"
        android:label="@string/finish_game"
        tools:layout="@layout/fragment_finish_game" />
</navigation>