<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsFragment"
    android:paddingTop="?attr/actionBarSize"
    android:padding="16dp">


    <TextView
        android:id="@+id/selectCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_category"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@+id/listDificulties" />

    <TextView
        android:id="@+id/tvSelectDifficulty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/select_difficulty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.097" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginTop="16dp"

        android:id="@+id/listCategories"
        android:layout_width="match_parent"
        android:layout_height="232dp"
        android:maxHeight="340dp"
        android:minHeight="340dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectCategory" />

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/progressBarCategories"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/listCategories"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/listCategories" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listDificulties"
        android:layout_width="match_parent"
        android:layout_height="116dp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/tvSelectDifficulty"
        tools:layout_editor_absoluteX="-4dp" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/save"
        android:textColor="#fff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listCategories" />
</androidx.constraintlayout.widget.ConstraintLayout>